Fix some contrast problems.

--- a/css/main.scss
+++ b/css/main.scss
@@ -18,9 +18,9 @@ $spacing-unit:     30px;
 
 $text-color:       #111;
 $background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$brand-color:      #2B7BB1;
 
-$grey-color:       #828282;
+$grey-color:       #757575;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
